# survey

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  GEMINI.md  README.md  docker-compose.vps.yml  docker-compose.yml  firebase.json  laudos.md  package-lock.json  package.json  pyproject.toml  run_all.sh
db/: .gitignore  Dockerfile  README.md  assets  docker-compose.yml  main.py  pyproject.toml
db/app/: config.py  database.py  models.py  router.py
db/config/: database_config.py  email_config.py  logging_config.py  system_settings.py
db/migrate/: migrate_to_mongo.py  migrate_to_mongo_local.py
db/models/: answer_model.py  patient_model.py  question_model.py  survey_model.py  survey_response_model.py
db/routers/: survey_responses.py
db/services/: email_service.py
services/clinical-writer-api/clinical_writer_agent/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  agent_config.py  agent_graph.py  analysis_engine.py  analysis_models.py  classification_strategies.py  examples_observer_pattern.py  main.py  model_router.py  prompt_registry.py  prompts.py  pyproject.toml  report_models.py  requirements.txt  settings.py  transcription_models.py  transcription_providers.py  transcription_retention.py  transcription_service.py
services/clinical-writer-api/clinical_writer_agent/agents/: __init__.py  agent_state.py  classification_agent.py  clinical_analyzer_agent.py  context_loader_agent.py  conversation_processor_agent.py  deterministic_router_agent.py  input_validator_agent.py  json_processor_agent.py  layered_node_utils.py  other_inputs_handler_agent.py  persona_writer_agent.py  reflector_agent.py  reflector_node.py  schemas.py  writer_nodes.py
services/clinical-writer-api/clinical_writer_agent/monitoring/: __init__.py  base_monitors.py  logging_monitor.py  metrics_monitor.py  progress_monitor.py  progress_tracker.py
services/clinical-writer-api/clinical_writer_agent/repository/: __init__.py  agent_route_repository.py  bad_word.txt  prompt_repository.py  slangs.txt
services/clinical-writer-api/clinical_writer_agent/scripts/: fetch_prompt.py
services/clinical-writer-api/clinical_writer_agent/tests/: __init__.py  conftest.py  test_agent_config.py  test_analysis_engine.py  test_api_contract.py  test_classification_strategies.py  test_integration.py  test_layered_agents.py  test_main.py  test_model_router.py  test_monitoring.py  test_prompt_registry.py  test_prompts.py  test_reflector_flow.py  test_security_boundaries.py  test_transcription_api.py  test_transcription_service.py
services/survey-backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/survey-backend/app/: main.py
services/survey-backend/app/adapters/: firebase_function.py
services/survey-backend/app/api/: errors.py  task_manager.py
services/survey-backend/app/api/decorators/: audit_failures.py  builder_audit.py
services/survey-backend/app/api/dependencies/: __init__.py  builder_auth.py  correlation.py  response_services.py  screener_auth.py
services/survey-backend/app/api/middleware/: correlation.py
services/survey-backend/app/api/models/: __init__.py  auth_models.py  report_delivery_models.py
services/survey-backend/app/api/routes/: agent_access_points.py  ai_agents.py  ai_settings.py  builder_auth.py  chat_messages.py  chat_sessions.py  clinical_writer.py  documents.py  medications.py  patient_responses.py  persona_skills.py  privacy.py  screener_access_links.py  screener_routes.py  screener_settings.py  survey.py  survey_prompts.py  survey_responses.py  templates.py  voice_transcriptions.py
services/survey-backend/app/api/ws/: chat_manager.py
services/survey-backend/app/config/: logging_config.py  privacy_audit_config.py  settings.py
services/survey-backend/app/domain/models/: _key_validation.py  agent_access_point_model.py  agent_response_model.py  ai_agent_model.py  ai_stages.py  answer_model.py  audit_models.py  chat_message_model.py  error_model.py  (+16 more)
services/survey-backend/app/migrations/: migrate_to_mongo_local.py
services/survey-backend/app/persistence/: deps.py
services/survey-backend/app/services/: access_point_selection.py  audit_privacy.py  builder_audit.py  clinical_text_resolver.py  document_generation.py  report_command_builder.py  report_delivery.py  report_pdf.py  response_submission.py  security_audit.py  survey_prompt_selection.py  template_service.py
services/survey-backend/tests/: test_access_point_selection.py  test_agent_access_point_router.py  test_agent_access_point_serialization.py  test_ai_agent_router.py  test_ai_config_resolution.py  test_builder_audit.py  test_builder_auth_router.py  test_clinical_text_resolver.py  test_clinical_writer_client.py  test_clinical_writer_health.py  test_clinical_writer_normalizer.py  test_clinical_writer_resolver.py  test_document_generation.py  test_integration_screener_repo.py  test_key_validation.py  test_main.py  test_medications_router.py  test_persona_skill_router.py  test_privacy_routes.py  test_report_delivery_service.py  test_report_formatter.py  test_report_pdf.py  test_response_submission.py  test_route_authorization_audit.py  test_screener_access_links_router.py  test_screener_auth_integration.py  test_screener_repo.py  test_screener_settings_router.py  test_security_audit.py  test_security_boundaries.py  test_send_report_email_router.py  test_startup_seeding.py  test_survey_persona_runtime_routes.py  test_survey_prompt_router.py  test_survey_prompt_selection.py  test_survey_response_model.py  test_survey_response_repo.py  test_survey_router.py  test_template_service.py
services/survey-backend/tools/: seed_reference_medications.py
services/survey-worker/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/survey-worker/app/: __init__.py  logging_config.py  main.py
services/survey-worker/app/config/: __init__.py  settings.py
services/survey-worker/app/jobs/: __init__.py  clinical_writer.py
services/survey-worker/tests/: test_clinical_writer_job.py  test_security_boundaries.py
(+1235 files in other folders)
