[project]
name = "lapan-survey-platform"
version = "0.2.0"
description = "LAPAN Survey Platform — UV workspace root"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.workspace]
members = [
    "services/survey-backend",
    "services/survey-worker",
    "services/clinical-writer-api/clinical_writer_agent",
    "packages/python/lapan-core",
]

# ── Skylos ──────────────────────────────────────────────────────────────────

[tool.skylos]
complexity = 10
nesting = 3
max_args = 5
max_lines = 50
god_file_max_lines = 500
god_file_max_definitions = 40
god_file_max_top_level_definitions = 25
duplicate_strings = 3
model = "gpt-4.1"
exclude = [
  ".skylos/cache/**",
  "config/runtime/generated/**",
  "**/.pytest_cache/**",
  "**/coverage_report/**",
  "**/uv.lock",
]
ignore = []

[tool.skylos.masking]
names = []
decorators = []
bases = []

[tool.skylos.templates]
# security = ".skylos/templates/security.md"
# quality = ".skylos/templates/quality.md"
# security_audit = ".skylos/templates/security_audit.md"
# review = ".skylos/templates/review.md"

[tool.skylos.vibe]
extra_phantom_names = []
extra_phantom_decorators = []
extra_credential_names = []
extra_sensitive_file_keywords = []
extra_network_timeout_calls = []

[tool.skylos.architecture]
strict = false
enforce_iad = false

[tool.skylos.whitelist]
names = []

[tool.skylos.whitelist.documented]

[tool.skylos.whitelist.temporary]

[tool.skylos.gate]
fail_on_critical = true
max_critical = 0
max_high = 5
max_security = 0
max_quality = 10
strict = false
