[project]
name = "lapan-survey-platform"
version = "0.2.0"
description = "LAPAN Survey Platform — UV workspace root"
requires-python = ">=3.13"
dependencies = [
    "skylos>=4.24.2",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pylint>=3.3.8",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.13.0",
]

[tool.uv.workspace]
members = [
    "services/survey-backend",
    "services/survey-worker",
    "services/clinical-writer-api/clinical_writer_agent",
    "packages/python/lapan-core",
]

# ── Skylos ──────────────────────────────────────────────────────────────────

[tool.skylos]
complexity = 10
nesting = 3
max_args = 5
max_lines = 50
god_file_max_lines = 500
god_file_max_definitions = 40
god_file_max_top_level_definitions = 25
duplicate_strings = 3
model = "gpt-4.1"
exclude = [
  ".skylos/cache/**",
  "config/runtime/generated/**",
  "**/.pytest_cache/**",
  "**/coverage_report/**",
  "**/uv.lock",
]
ignore = []

[tool.skylos.masking]
names = []
decorators = []
bases = []

[tool.skylos.templates]
# security = ".skylos/templates/security.md"
# quality = ".skylos/templates/quality.md"
# security_audit = ".skylos/templates/security_audit.md"
# review = ".skylos/templates/review.md"

[tool.skylos.vibe]
extra_phantom_names = []
extra_phantom_decorators = []
extra_credential_names = []
extra_sensitive_file_keywords = []
extra_network_timeout_calls = []

[tool.skylos.architecture]
strict = false
enforce_iad = false

[tool.skylos.whitelist]
names = []

[tool.skylos.whitelist.documented]

[tool.skylos.whitelist.temporary]

[tool.skylos.gate]
fail_on_critical = true
max_critical = 0
max_high = 5
max_security = 0
max_quality = 10
strict = false

[tool.ruff]
target-version = "py313"
line-length = 100
respect-gitignore = true
extend-exclude = [
  ".skylos",
  "config/runtime/generated",
  "**/.pytest_cache",
  "**/coverage_report",
  "**/.venv",
  "node_modules",
  "tools/codex-claude-mobile-toolkit",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "ARG"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["ARG001", "ARG002", "ARG005"]

[tool.mypy]
python_version = "3.13"
namespace_packages = true
explicit_package_bases = true
pretty = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
mypy_path = [
  "services/survey-backend",
  "services/survey-worker",
  "services/clinical-writer-api/clinical_writer_agent",
  "packages/python/lapan-core",
]
exclude = [
  "^\\.venv/",
  "^\\.skylos/",
  "^config/runtime/generated/",
  "^tools/codex-claude-mobile-toolkit/",
]

[[tool.mypy.overrides]]
module = [
  "fastapi_mail.*",
  "google.*",
  "langchain.*",
  "langchain_google_genai.*",
  "langgraph.*",
  "pymongo.*",
  "reportlab.*",
  "starlette_context.*",
]
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.13"
jobs = 0
ignore-paths = [
  "^\\.venv/",
  "^\\.skylos/",
  "^config/runtime/generated/",
  "^tools/codex-claude-mobile-toolkit/",
]

[tool.pylint.messages_control]
disable = [
  "C",
  "R0903",
  "R0913",
  "R0914",
  "R0917",
  "W0511",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-branches = 15
max-locals = 20
max-returns = 8
max-statements = 60
