[project]
name = "survey-backend"
version = "0.2.0"
description = "The main backend service for the LAPAN Survey Platform. It is a FastAPI application that provides a RESTful API for managing surveys, survey responses, and patient responses."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.1",
    "email-validator>=2.3",
    "fastapi>=0.128",
    "fastapi-mail>=1.6",
    "httpx>=0.28",
    "lapan-core",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "pyjwt>=2.10",
    "pymongo>=4.16",
    "reportlab>=4.2",
    "starlette>=0.50",
    "uvicorn>=0.40",
    "uvicorn-worker>=0.4",
]

[tool.uv.sources]
lapan-core = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [".", "app"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html:coverage_report"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "import",
]
show_missing = true
fail_under = 80
