[project]
name = "survey-worker"
version = "0.2.0"
description = "Background worker for response enrichment and clinical writer dispatch"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "lapan-core",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymongo>=4.16",
    "python-dotenv>=1.2",
]

[tool.uv.sources]
lapan-core = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [".", "app"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html:coverage_report"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "import",
]
show_missing = true
fail_under = 80
