[project]
name = "clinical-writer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "google-genai>=1.50.1",
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.3",
    "langgraph>=1.0.3",
    "openai>=2.13.0",
    "pylint>=4.0.4",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "starlette-context>=0.4.0",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
    "google-api-python-client>=2.116.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]

[tool.uv]
upgrade = true

[tool.uv.pip]
compile-bytecode = true

