[project]
name = "clinical-writer-agent"
version = "0.2.0"
description = "LLM-based clinical narrative generation agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128",
    "google-genai>=1.50",
    "langchain>=1.0",
    "langchain-google-genai>=3.0",
    "langgraph>=1.0",
    "lapan-core",
    "openai>=2.13",
    "pydantic-settings>=2.12",
    "pymongo>=4.16",
    "python-dotenv>=1.2",
    "starlette-context>=0.4",
    "uvicorn>=0.38",
]

[tool.uv.sources]
lapan-core = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=. --cov-report=term-missing --cov-report=html:coverage_report"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "**/__init__.py", "examples_observer_pattern.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 80

[tool.uv]
upgrade = true

[tool.uv.pip]
compile-bytecode = true
